--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,26 @@ spring.shardingsphere.datasource.ds1.jdbcUrl=jdbc:mysql://localhost:3306/ds1?ser
 spring.shardingsphere.datasource.ds1.username=root
 spring.shardingsphere.datasource.ds1.password=qq123456
 
-
-
 spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order$->{0..1}
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order$->{order_id % 2}
 spring.shardingsphere.sharding.tables.t_order.key-generator.column=id
 spring.shardingsphere.sharding.tables.t_order.key-generator.type=SNOWFLAKE
-spring.shardingsphere.sharding.binding-tables=t_order
+
+spring.shardingsphere.sharding.tables.t_order_item.actual-data-nodes=ds$->{0..1}.t_order_item$->{0..1}
+spring.shardingsphere.sharding.tables.t_order_item.table-strategy.inline.sharding-column=order_id
+spring.shardingsphere.sharding.tables.t_order_item.table-strategy.inline.algorithm-expression=t_order_item$->{order_id % 2}
+spring.shardingsphere.sharding.tables.t_order_item.key-generator.column=id
+spring.shardingsphere.sharding.tables.t_order_item.key-generator.type=SNOWFLAKE
+
+
+spring.shardingsphere.sharding.tables.student.actual-data-nodes=ds0.student$->{0..1}
+spring.shardingsphere.sharding.tables.student.table-strategy.inline.sharding-column=student_id
+spring.shardingsphere.sharding.tables.student.table-strategy.inline.algorithm-expression=student_$->{student_id % 2}
+spring.shardingsphere.sharding.tables.student.key-generator.column=id
+spring.shardingsphere.sharding.tables.student.key-generator.type=SNOWFLAKE
+
+spring.shardingsphere.sharding.binding-tables=t_order,t_order_item,student
 #spring.shardingsphere.sharding.broadcast-tables=t_config
 
 spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=order_id
