--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,8 @@ spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=
 spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{order_id % 2}
 
 spring.shardingsphere.props.sql.show=true
+
+#actuator show
+#http://localhost:8080/actuator/prometheus
+management.endpoints.web.exposure.include=*
+
